# code_analyzer

./: .gitignore  README.md  pyproject.toml  requirements.txt  requirements_dev.txt  setup.cfg  tox.ini
.github/workflows/: test.yml
code_analyzer/: __init__.py  code_analyzer.py  code_analyzer_printer.py  constants.py  container_comment.py  exception.py  interpretable.py  scope.py  trace_call_result.py
examples/: example.py  example_1.py  example_1_execution_analysis.txt  example_2.py  example_3.py  example_basic.py  example_basic_code_analysis.txt  example_basic_code_analysis_rich.html  example_big.py  example_big_rich_execution_analysis.html  example_cursive_complex.py  example_cursive_complex_code_analysis_rich.html  example_recursive.py  example_recursive_code_analysis.txt  example_recursive_code_analysis_rich.html  example_recursive_complex.py  example_recursive_complex_code_analysis_rich.html  example_test.py  example_test_code_analysis.txt  example_test_code_analysis_rich.html  example_v1.py  example_v2.py  example_v3.py  temps.py  tet.html
python_code_analyzer-1.0.1/: LICENSE  PKG-INFO  setup.cfg
python_code_analyzer-1.0.1/code_analyzer/: __init__.py  code_analyzer_printer.py  constants.py  container_comment.py  interpretable.py  scope.py  trace_call_result.py
python_code_analyzer_2/: __init__.py  constants.py  interpretable.py  python_code_analyzer.py  scope.py  trace_call_result.py
tests/: test_basic.py  test_code_analyzer.py  test_code_analyzer_comment.py  test_code_analyzer_container_comment.py  test_code_analyzer_interpretable.py  test_code_analyzer_scope.py  test_code_analyzer_trace_call_result.py
