[build-system]
requires = ["setuptools>=42.0", "wheel"]
build-backend = "setuptools.build_meta"

[tool.pytest.ini_options]
addopts = "-ra -q"
testpaths = [
    "tests",
]



[tool.mypy]
mypy_path = "code_analyzer"

#strict = true
check_untyped_defs = true  # Will check defs with no typing
#disallow_any_generics = true  # Will complain for "Any" type and missing types
#ignore_missing_imports = true
no_implicit_optional = true
show_error_codes = true
strict_equality = true
warn_redundant_casts = true
#warn_return_any = true  # Will complain for decorators
warn_unreachable = true
warn_unused_configs = true
#no_implicit_reexport = true  # Will complain on import style that prevents circular imports