[metadata]
name = python_code_analyzer
version = 1.0.5
description = A python code analyzer that high jacks the current settrace function to analyze executed code.
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/josephedradan/code_analyzer
author = Joseph Edradan
author_email = edradanjoseph245@gmail.com
license = MIT
license_files = LICENSE
classifiers =
    Development Status :: 5 - Production/Stable
    Intended Audience :: Developers
    License :: OSI Approved :: MIT License
    Operating System :: MacOS :: MacOS X
    Operating System :: Microsoft :: Windows
    Operating System :: Unix
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3 :: Only
keywords =
    python
    analyzer
    debugger
    python code analyzer
    python analyzer
package_dir = {'': 'code_analyzer'}

[options]
packages = find:
install_requires =
    colorama
    pandas
    rich
python_requires = >=3.7

[options.packages.find]
exclude =
    tests*
    examples*
    images*

[options.extras_require]
testing =
    pytest
    tox
