[metadata]
name = python_code_analyzer
version = 1.0.6
description = A python code analyzer that high jacks the current settrace function to analyze executed code.
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/josephedradan/code_analyzer
author = Joseph Edradan
author_email = edradanjoseph245@gmail.com
license = MIT
license_files = LICENSE
classifiers =
    Development Status :: 5 - Production/Stable
    Intended Audience :: Developers
    License :: OSI Approved :: MIT License
    Operating System :: MacOS :: MacOS X
    Operating System :: Microsoft :: Windows
    Operating System :: Unix
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3 :: Only
    Programming Language :: Python :: 3.7
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.9
    Programming Language :: Python :: 3.10
    Programming Language :: Python :: 3.11
keywords =
    python
    analyzer
    debugger
    python code analyzer
    python analyzer
package_dir = {'': 'code_analyzer'}

[options]
packages = find:
install_requires =
    colorama
    pandas
    rich
python_requires = >=3.7

[options.packages.find]
exclude =
    tests*
    examples*
    images*

[options.extras_require]
testing =
    mypy
    pytest
    tox

[options.package_data]
code_analyzer =
    py.typed
